// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input Field accepts an onUpdate function 1`] = `
<div
  className="input-group"
>
  <input
    autoFocus={undefined}
    className="input-control null null null"
    disabled={undefined}
    id="login-name"
    maxLength={undefined}
    onChange={[Function]}
    placeholder={undefined}
    readOnly={undefined}
    required={undefined}
    type="text"
    value=""
  />
</div>
`;

exports[`Input Field can disable 1`] = `
<div
  className="input-group"
>
  <input
    autoFocus={undefined}
    className="input-control null null disabled"
    disabled={true}
    id="login-name"
    maxLength={undefined}
    onChange={[Function]}
    placeholder={undefined}
    readOnly={undefined}
    required={undefined}
    type="text"
    value=""
  />
</div>
`;

exports[`Input Field can disable 2`] = `
<div
  className="input-group"
>
  <input
    autoFocus={undefined}
    className="input-control null null disabled"
    disabled={true}
    id="login-name"
    maxLength={undefined}
    onChange={[Function]}
    placeholder={undefined}
    readOnly={undefined}
    required={undefined}
    type="text"
    value=""
  />
</div>
`;

exports[`Input Field can error 1`] = `
<div
  className="input-group"
>
  <input
    autoFocus={undefined}
    className="input-control error null null"
    disabled={undefined}
    id="login-name"
    maxLength={undefined}
    onChange={[Function]}
    placeholder={undefined}
    readOnly={undefined}
    required={undefined}
    type="text"
    value=""
  />
</div>
`;

exports[`Input Field can error 2`] = `
<div
  className="input-group"
>
  <input
    autoFocus={undefined}
    className="input-control error null null"
    disabled={undefined}
    id="login-name"
    maxLength={undefined}
    onChange={[Function]}
    placeholder={undefined}
    readOnly={undefined}
    required={undefined}
    type="text"
    value=""
  />
</div>
`;

exports[`Input Field can have type 1`] = `
<div
  className="input-group"
>
  <input
    autoFocus={undefined}
    className="input-control null null null"
    disabled={undefined}
    id="login-name"
    maxLength={undefined}
    onChange={[Function]}
    placeholder={undefined}
    readOnly={undefined}
    required={undefined}
    type="text"
    value=""
  />
</div>
`;

exports[`Input Field can have type 2`] = `
<div
  className="input-group"
>
  <input
    autoFocus={undefined}
    className="input-control null null null"
    disabled={undefined}
    id="login-name"
    maxLength={undefined}
    onChange={[Function]}
    placeholder={undefined}
    readOnly={undefined}
    required={undefined}
    type="password"
    value=""
  />
</div>
`;

exports[`Input Field can success 1`] = `
<div
  className="input-group"
>
  <input
    autoFocus={undefined}
    className="input-control null success null"
    disabled={undefined}
    id="login-name"
    maxLength={undefined}
    onChange={[Function]}
    placeholder={undefined}
    readOnly={undefined}
    required={undefined}
    type="text"
    value=""
  />
</div>
`;

exports[`Input Field can success 2`] = `
<div
  className="input-group"
>
  <input
    autoFocus={undefined}
    className="input-control null success null"
    disabled={undefined}
    id="login-name"
    maxLength={undefined}
    onChange={[Function]}
    placeholder={undefined}
    readOnly={undefined}
    required={undefined}
    type="text"
    value=""
  />
</div>
`;

exports[`Input Field has a placeholder 1`] = `
<div
  className="input-group"
>
  <input
    autoFocus={undefined}
    className="input-control null null null"
    disabled={undefined}
    id="login-name"
    maxLength={undefined}
    onChange={[Function]}
    placeholder="placeholder"
    readOnly={undefined}
    required={undefined}
    type="text"
    value=""
  />
</div>
`;

exports[`Input Field has a value 1`] = `
<div
  className="input-group"
>
  <input
    autoFocus={undefined}
    className="input-control null null null"
    disabled={undefined}
    id="login-name"
    maxLength={undefined}
    onChange={[Function]}
    placeholder={undefined}
    readOnly={undefined}
    required={undefined}
    type="text"
    value="value"
  />
</div>
`;

exports[`Input Field has an FA icon 1`] = `
<div
  className="input-group"
>
  <input
    autoFocus={undefined}
    className="input-control null null null"
    disabled={undefined}
    id="login-name"
    maxLength={undefined}
    onChange={[Function]}
    placeholder={undefined}
    readOnly={undefined}
    required={undefined}
    type="text"
    value=""
  />
  <label
    className="input-icon fa fa-gear"
    htmlFor="login-name"
  />
</div>
`;

exports[`Input Field rejects onUpdate non-function 1`] = `
<div
  className="input-group"
>
  <input
    autoFocus={undefined}
    className="input-control null null null"
    disabled={undefined}
    id="login-name"
    maxLength={undefined}
    onChange={[Function]}
    placeholder={undefined}
    readOnly={undefined}
    required={undefined}
    type="text"
    value=""
  />
</div>
`;

exports[`Input Field renders 1`] = `
<div
  className="input-group"
>
  <input
    autoFocus={undefined}
    className="input-control null null null"
    disabled={undefined}
    id="login-name"
    maxLength={undefined}
    onChange={[Function]}
    placeholder={undefined}
    readOnly={undefined}
    required={undefined}
    type="text"
    value=""
  />
</div>
`;
